--- a/style.css
+++ b/style.css
@@ -22,23 +22,29 @@ body{
 /* Nav Button*/
 .nav-button{
     align-items: center;
+    margin: 0 50px;
 }
 
 .nav-button{
     display: flex;
-    gap: 10px;
+    gap: 30px;
     padding: 10px;
 }
 
 .nav-button li{
     list-style: none;
-    background-color: rgb(90, 103, 114);
-    
+    box-shadow:  4px 4px  rgb(255, 210, 10);
 }
 
 .nav-button a{
     text-decoration: none;
     color: white;
+    background-color: rgb(90, 103, 114);
+}
+.nav-button a:hover{
+    color: black;
+    background-color: rgb(255, 255, 255);
+    box-shadow:  4px 4px  rgb(0, 0, 0);
 }
 
 /*Header*/
@@ -49,5 +55,41 @@ body{
     background-color: aquamarine;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 0 4px 1px rgb(0, 22, 146);
     font-size: 30px;
+}
+
+/*About ME Header Main*/
+
+.about-me-header-main{
+    display: flex;
+    justify-content: space-around;
+    width: auto;
+    height: auto;
+    flex-wrap: wrap;
+}
+
+.about-me-image{
+    flex: 0 1 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.about-me-image img{
+    height: 400px;
+    width: 350px;
+}
+
+.about-me-text{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.about-me-text p {
+    background-color: lightcyan;
+    width: 800px;
+    height: auto;
 }
